[package]
name = "liftoff-rebase"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "liftoff_rebase"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31", features = ["init-if-needed"] }
anchor-spl = { version = "0.31", features = ["token_2022", "associated_token"] }
spl-token-metadata-interface = "0.7"
spl-token-2022 = { version = "9", features = ["no-entrypoint"] }
